--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
-# elm-package generated files
+# elm stuff
 elm-stuff
-# elm-repl generated files
 repl-temp-*
 
+# lamdera stuff
 lamdera-stuff
 /node_modules/
+
+# python stuff
+__pycache__/
+.venv/
