add install Makefile target [make virtual environment and install dev dependencies]

--- a/moby/Makefile
+++ b/moby/Makefile
@@ -1,2 +1,7 @@
 test:
-	pytest --approvaltests-use-reporter="meld"
+	.venv/bin/pytest --approvaltests-use-reporter="meld"
+
+install:
+ python3.6 -m venv .venv
+ .venv/bin/pip install --upgrade pip
+ .venv/bin/pip install -r requirements.txt
